# samplehive.fork

./: .dir-locals.el  CONTRIBUTING.org  LICENSE  README.md  README.org  meson.build
.builds/: archlinux.yml  ubuntu.yml
.gitlab/issue_templates/: Bug.md  FeatureRequest.md
src/: App.cpp  App.hpp  Browser.cpp  Browser.hpp  ControlID_Enums.hpp  Database.cpp  Database.hpp  IDatabase.hpp  MainFrame.cpp  MainFrame.hpp  SH_Event.cpp  SH_Event.hpp  Sample.cpp  Sample.hpp  Serialize.cpp  Serialize.hpp  SettingsDialog.cpp  SettingsDialog.hpp  TagEditorDialog.cpp  TagEditorDialog.hpp  Tags.cpp  Tags.hpp  TreeItemDialog.cpp  TreeItemDialog.hpp  WaveformViewer.cpp  WaveformViewer.hpp
src/Database/: Database.cpp  Database.hpp
src/GUI/: DirectoryBrowser.cpp  DirectoryBrowser.hpp  Hives.cpp  Hives.hpp  InfoBar.cpp  InfoBar.hpp  Library.cpp  Library.hpp  ListCtrl.cpp  ListCtrl.hpp  MainFrame.cpp  MainFrame.hpp  Notebook.cpp  Notebook.hpp  Resources.rc  SearchBar.cpp  SearchBar.hpp  TransportControls.cpp  TransportControls.hpp  Trash.cpp  Trash.hpp  WaveformViewer.cpp  WaveformViewer.hpp
src/GUI/Dialogs/: Settings.cpp  Settings.hpp  TagEditor.cpp  TagEditor.hpp
src/Utility/: ControlID_Enums.hpp  ControlIDs.hpp  Event.cpp  Event.hpp  HiveData.hpp  Log.cpp  Log.hpp  Paths.hpp  SH_Event.cpp  SH_Event.hpp  Sample.cpp  Sample.hpp  Serialize.cpp  Serialize.hpp  Signal.cpp  Signal.hpp  Tags.cpp  Tags.hpp  Utils.cpp  Utils.hpp
subprojects/: libsndfile.wrap  spdlog.wrap  taglib.wrap  wxwidgets.wrap  yaml-cpp.wrap
